# Academy-containerisation-task

./: README.md  answers.md
services/admin_computer/: README.md
services/admin_computer/Admin Computer/: AdminComputer.java  Dockerfile.dockerfile  notes.txt
services/rebel_communications/: Dockerfile  README.md  pyproject.toml
services/rebel_communications/src/rebel_communications/: __init__.py  __main__.py  api.py  database.py
services/rebel_communications/src/rebel_communications/routers/: __init__.py  messages.py
services/rebel_database/: Dockerfile  README.md  database.sql
services/rebel_secret_communications/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/rebel_secret_communications/src/rebel_secret_communications/: __init__.py  __main__.py  api.py  database.py  network.py
services/rebel_secret_communications/src/rebel_secret_communications/routers/: messages.py
